
ACLOCAL_AMFLAGS = -I m4

moddir = @APACHE_MODULEDIR@
mod_LTLIBRARIES = mod_v8.la

mod_v8_la_SOURCES = mod_v8.cpp
mod_v8_la_CFLAGS = @APACHE_CFLAGS@ @APACHE_INCLUDES@ @V8_INCLUDES@
mod_v8_la_CPPFLAGS = @APACHE_CPPFLAGS@ @APACHE_INCLUDES@ @V8_INCLUDES@
mod_v8_la_LDFLAGS = -avoid-version -module @APACHE_LDFLAGS@ @V8_LDFLAGS@
mod_v8_la_LIBS = @APACHE_LIBS@ @V8_LDFLAGS@
